nada funciona. Input otros en construcción.

--- a/index.html
+++ b/index.html
@@ -176,9 +176,10 @@
                             <option value="comandancia de la primera orden">Comandancia de la primera orden</option>
                             <option value="tropa de asalto">Tropa de asalto</option>
                             <option value="escoria rebelde">Escoria rebelde</option>
-                            <option id="otros" value="otros">Otros</option>
+                            <option value="otros">Otros</option>
                         </select>
                     </li>
+                    <li class="form-group"><input class="invisible" type="text" name="otros" id="otros" placeholder="¿Qué sabandija galáctica te ha hablado de mí?"></li>
                 </ul>
                 <button class="boton" type="submit" id="send">¡Ciberconectémonos!</button>
             </form>
