--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="home-wrapper">
                     <header>
                         <h2><span class="entradaIzq">Capitana</span><br/><span class="entradaDer">Phasma</span></h2>
-                        <p class="aparece">¿Quieres saber más de mí?</p>
+                        <p class="fundido crece">¿Quieres saber más de mí?</p>
                     </header>
                 </div>
             </section>
@@ -171,7 +171,7 @@
                         </li>
                         <li class="form-group">
                             <input type="checkbox" name="condiciones" id="condiciones" required>
-                            <label class="check" for="condiciones">Acepto las <a href="#">condiciones</a></label>
+                            <label class="check" for="condiciones">Acepto las <a href="./condiciones.html">condiciones</a></label>
                         </li>
                         <li class="form-group">
                             <legend>Al grano. ¿Qué quieres de mí?</legend>
@@ -204,23 +204,23 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#" title="Twitter">
+                        <a id="linkedin" href="https://www.linkedin.com/in/maria-robles-587a722a/" target="_blank" title="Linkedin">
                             <span class="fa-stack fa-2x">
                                 <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                                <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
                             </span>
                         </a>
                     </li>
                     <li>
-                        <a href="#" title="Facebook">
+                        <a id="instagram" href="https://www.instagram.com/mariadelamareria/?hl=es" target="_blank" title="Instagram">
                             <span class="fa-stack fa-2x">
                                 <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                                <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
                             </span>                        
                         </a>
                     </li>
                     <li>
-                        <a href="#" title="Github">
+                        <a id="github" href="https://github.com/MariaRoblesSpin" target="_blank" title="Github">
                             <span class="fa-stack fa-2x">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-github fa-stack-1x fa-inverse"></i>
