mensaje envío en construcción

--- a/condiciones.html
+++ b/condiciones.html
@@ -46,7 +46,7 @@
                         <p>¿Sabes con quién estás poniéndote en contacto?</p>
                     </header>
                     <div class="content-wrapper">
-                        <p>Como buena villana la LOPD me la paso por el arco retractil del gatillo de mi rifle blaster.</p>
+                        <p>Como buena villana la L.O.P.D. me la paso por el arco retractil del gatillo de mi rifle blaster.</p>
                         <p>Conmigo tonterías las justas. Tú dame tus datos que ya veré yo lo que hago con ellos.</p>
                         <p>No te puedo prometer que no se los vaya a vender a los cazadores de identidades de los confines de la galaxia.</p> 
                         <p>Os he avisado.</p>
