--- a/index.html
+++ b/index.html
@@ -195,8 +195,10 @@
                             </select>
                         </li>
                         <li class="form-group"><input class="invisible" type="text" name="otros" id="otros" placeholder="¿Qué sabandija galáctica te ha hablado de mí?"></li>
+                        <li id="agradecer" class="tooltip-wrapper"><p id="agradecer-text" class="tooltip" title=""></p></li>
                     </ul>
-                    <button class="boton" type="submit" id="send">¡Ciberconectémonos!</button>
+                    <button class="boton" type="submit" id="enviar">¡Ciberconectémonos!</button>
+                    
                 </form>
             </section>
         </main>
