Todo ok. Mensaje de agradecimiento extra en el envío.

--- a/condiciones.html
+++ b/condiciones.html
@@ -22,7 +22,7 @@
         <nav class="boton-menu">
             <h1>CV Capitana Phasma</h1>
             <div class="botones">
-                <a href="#menu-superior" id="abrir" class="fas fa-bars fa-lg"></a>
+                <a href="./condiciones.html#menu-superior" id="abrir" class="fas fa-bars fa-lg"></a>
                 <a href="#" id="cerrar" class="fas fa-times fa-lg hide"></a>
             </div>    
         </nav>
