--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="boton-menu">
             <h1>CV Capitana Phasma</h1>
             <div class="botones">
-                <a href="#menu-superior" id="abrir" class="fas fa-bars fa-lg"></a>
+                <a href="./index.html#menu-superior" id="abrir" class="fas fa-bars fa-lg"></a>
                 <a href="#" id="cerrar" class="fas fa-times fa-lg hide"></a>
             </div>    
         </nav>
@@ -42,7 +42,10 @@
             <section id="home" class="home">
                 <div class="home-wrapper">
                     <header>
-                        <h2><span class="entradaIzq">Capitana</span><br/><span class="entradaDer">Phasma</span></h2>
+                        <h2>
+                            <span class="entradaIzq">Capitana</span>
+                            <span class="entradaDer">Phasma</span>
+                        </h2>
                         <p class="fundido crece">¿Quieres saber más de mí?</p>
                     </header>
                 </div>
@@ -90,7 +93,7 @@
                             <dd>Crecí en las cuevas y en las calles de Parnassos, un mundo en descomposición. La dureza de las condiciones de una sociedad postapocalíptica me han hecho ser la mujer cargada de determinación que soy hoy en día.</dd>
                         </dl>
                     </div>
-                    <footer>
+                    <aside>
                         <h2>Formación complementaria</h2>
                         <div class="footer-wrapper">
                             <h3>Idiomas</h3>
@@ -110,7 +113,7 @@
                                 <li>Mi primera víctima mortal: en el clan Nautilus <strong>con 12 años</strong>. Me doblaba en peso y altura. Yo le doblaba en inteligencia.</li>
                             </ul>
                         </div>
-                    </footer>
+                    </aside>
                 </div>
             </section>
             <section id="experiencia">
@@ -157,7 +160,7 @@
                 <form id="formulario">
                     <ul>
                         <li class="form-group">
-                            <input type="text" name="nombre" id="nombre" placeholder="Rellene su nombre completo" required pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,48}"">
+                            <input type="text" name="nombre" id="nombre" placeholder="Rellene su nombre completo" required pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð,.'-]{2,48}">
                         </li>
                         <li class="form-group">
                             <input type="email" name="email" id="email" placeholder="Dirección email" required pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$">
